--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <!-- Form Section -->
                 <div class="col-lg-6 col-md-6">
-                    <form action="" class="text-center form-log">
+                    <form action="/login" method="POST" class="text-center form-log">
                         <!-- Logo -->
                         <div class="img-logo d-flex justify-content-center mt-4">
                             <img src="img/logo.png" alt="Logo">
@@ -40,7 +40,7 @@
                                     <div class="country-code">
                                         <i class="fa-solid fa-phone"></i>
                                     </div>
-                                    <input type="number" placeholder="رقم الجوال" class="mobile-input text-end">
+                                    <input type="tel" placeholder="رقم الجوال" class="mobile-input text-end">
                                 </div>
                             </div>
                         </div>
@@ -103,6 +103,6 @@
             </div>
         </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
-<script src="js/main.js"></script>
 </html>
