--- a/createaccount.html
+++ b/createaccount.html
@@ -42,7 +42,7 @@
                         <div>مواعيد الدوام</div>
                     </div>
                     <div class="d-flex justify-content-center mt-4 flex-wrap ">
-                        <form action="">
+                        <form action="/create-account" method="POST">
                             <div class="d-flex justify-content-between gap-3 flex-wrap">
                                 <div class="group-input">
                                     <label class="mobile-label text-end p-2 fw-bold">اسم المستخدم</label>
