--- a/locationdata.html
+++ b/locationdata.html
@@ -41,7 +41,7 @@
                         <div>مواعيد الدوام</div>
                     </div>
                     <div class="d-flex justify-content-center mt-4 flex-wrap ">
-                        <form action="">
+                        <form action="/location" method="post">
                             <div class="d-flex justify-content-between gap-3 flex-wrap">
                                 <div class="group-input">
                                     <label class="mobile-label text-end p-3 fw-bold">رقم السجل التجارى</label>
