--- a/locationdata.html
+++ b/locationdata.html
@@ -53,9 +53,9 @@
                                     <label class="mobile-label text-end p-3 fw-bold">صورة السجل التجارى</label>
                                     <div class="mobile-number-container ">
 
-                                        <label for="fileInput" class="custom-file-upload">
+                                        <label for="fileInput1" class="custom-file-upload">
                                             اختر صورة
-                                            <input type="file" id="fileInput" accept="image/*">
+                                            <input type="file" id="fileInput1" accept="image/*">
                                         </label>
                                     </div>
                                 </div>
@@ -71,9 +71,9 @@
                                     <label class="mobile-label text-end p-3 fw-bold">صورة او شعار المكان </label>
                                     <div class="mobile-number-container ">
 
-                                        <label for="fileInput" class="custom-file-upload">
+                                        <label for="fileInput2" class="custom-file-upload">
                                             اختر صورة
-                                            <input type="file" id="fileInput" accept="image/*">
+                                            <input type="file" id="fileInput2" accept="image/*">
                                         </label>
                                     </div>
                                 </div>
@@ -84,9 +84,9 @@
                                     <label class="mobile-label text-end p-3 fw-bold">صورة اضافية للمكان</label>
                                     <div class="mobile-number-container ">
 
-                                        <label for="fileInput" class="custom-file-upload">
+                                        <label for="fileInput3" class="custom-file-upload">
                                             اختر صورة
-                                            <input type="file" id="fileInput" accept="image/*">
+                                            <input type="file" id="fileInput3" accept="image/*">
                                         </label>
                                     </div>
                                 </div>
@@ -232,6 +232,5 @@
     </div>
 </body>
 <script src="js/bootstrap.bundle.min.js"></script>
-
 
 </html>
